--- a/vite-project/src/css/navbar.css
+++ b/vite-project/src/css/navbar.css
@@ -19,7 +19,7 @@
   left: 0;
   font-size: 1.5rem;
   font-weight: 600;
-  color: white;
+  color: var(--text-h);
   align-items: left;
   justify-content: left;
   margin: 0.5rem;
@@ -29,7 +29,7 @@
 }
 
 .navbar a {
-  color: white;
+  color: var(--text-h);
   text-decoration: none;
   font-weight: 500;
 }
@@ -66,7 +66,7 @@
   border-right: none;
   border-left: none;
   border-bottom: none;
-  color: white;
+  color: var(--text-h);
   background-color: transparent;
   cursor: pointer;
 }
