--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -1,16 +1,4 @@
 :root {
-  --text: #6b6375;
-  --text-h: #08060d;
-  --bg: #fff;
-  --border: #e5e4e7;
-  --code-bg: #f4f3ec;
-  --accent: #aa3bff;
-  --accent-bg: rgba(170, 59, 255, 0.1);
-  --accent-border: rgba(170, 59, 255, 0.5);
-  --social-bg: rgba(244, 243, 236, 0.5);
-  --shadow:
-    rgba(0, 0, 0, 0.1) 0 10px 15px -3px, rgba(0, 0, 0, 0.05) 0 4px 6px -2px;
-
   --sans: system-ui, 'Segoe UI', Roboto, sans-serif;
   --heading: system-ui, 'Segoe UI', Roboto, sans-serif;
   --mono: ui-monospace, Consolas, monospace;
@@ -28,6 +16,26 @@
   @media (max-width: 1024px) {
     font-size: 16px;
   }
+
+  
+}
+
+@media (prefers-color-scheme: light) {
+  :root{
+    --text: rgb(77, 77, 77);
+    --text-h: rgb(30, 30, 30);
+    --footer: rgb(125, 125, 125);
+    --bg: rgb(200, 200, 200);
+    --border: #e5e4e7;
+    --code-bg: #f4f3ec;
+    --accent: #454447;
+    --accent-bg: rgba(52, 44, 59, 0.1);
+    --accent-border: rgba(52, 44, 59, 0.5);
+    --social-bg: rgba(244, 243, 236, 0.5);
+    --overlay-bg: rgba(200, 200, 200, 0.85);
+    --shadow:
+      rgba(0, 0, 0, 0.1) 0 10px 15px -3px, rgba(0, 0, 0, 0.05) 0 4px 6px -2px;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -37,9 +45,10 @@
     --bg: #16171d;
     --border: #2e303a;
     --code-bg: #1f2028;
-    --accent: #c084fc;
-    --accent-bg: rgba(192, 132, 252, 0.15);
-    --accent-border: rgba(192, 132, 252, 0.5);
+    --accent: rgb(74, 100, 134);
+    --accent-bg: (74, 100, 134);
+    --accent-bg: rgba(74, 100, 134, 0.15);
+    --accent-border: rgba(74, 100, 134, 0.5);
     --social-bg: rgba(47, 48, 58, 0.5);
     --shadow:
       rgba(0, 0, 0, 0.4) 0 10px 15px -3px, rgba(0, 0, 0, 0.25) 0 4px 6px -2px;
